last push logistic regression

--- a/Regressao_Logistica_V1.ipynb
+++ b/Regressao_Logistica_V1.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "run_control": {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "run_control": {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {
     "run_control": {
      "marked": true
@@ -119,7 +119,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {
     "run_control": {
      "marked": true
@@ -148,7 +148,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {
     "run_control": {
      "marked": true
@@ -184,7 +184,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {
     "run_control": {
      "marked": true
@@ -209,7 +209,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "Name: Activity, dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,21 +261,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7285     3\n",
-       "7433     3\n",
-       "10126    2\n",
-       "6797     5\n",
-       "7196     2\n",
+       "2597    0\n",
+       "6638    2\n",
+       "7760    3\n",
+       "927     3\n",
+       "4352    5\n",
        "Name: Activity, dtype: int32"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "[22815 rows x 4 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
        "Name: Activity, dtype: float64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
        "Name: Activity, dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -666,10 +666,22 @@
     {
      "data": {
       "text/plain": [
-       "array([3, 5, 3, ..., 1, 1, 5])"
+       "(array([[-8.03057360e-02,  3.00552671e-02,  3.00166970e-02, ...,\n",
+       "          1.45724046e+00, -7.36165147e-01, -2.37969975e-01],\n",
+       "        [-3.86064087e-01, -1.27583831e-01,  3.81870103e-02, ...,\n",
+       "         -7.26481232e-01, -5.80948676e-01, -1.89821384e-01],\n",
+       "        [ 2.60077032e-01,  6.92559387e-02,  1.22652241e-01, ...,\n",
+       "         -6.79221602e-01,  1.27257375e+00,  3.54670116e-01],\n",
+       "        [-2.69408616e-02, -1.28606116e-02,  3.85810148e-04, ...,\n",
+       "         -1.56096824e-01, -8.95564339e-02,  5.89104636e-02],\n",
+       "        [ 2.90907930e-01,  9.56885520e-02,  1.41910548e-02, ...,\n",
+       "         -3.50871514e-01, -2.07235546e-01, -1.66619012e-01],\n",
+       "        [-5.76742778e-02, -5.45553149e-02, -2.05432813e-01, ...,\n",
+       "          4.55430712e-01,  3.41332058e-01,  1.80829791e-01]]),\n",
+       " array([3, 5, 3, ..., 1, 1, 5]))"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +692,7 @@
     "# Standard logistic regressio\n",
     "lr = LogisticRegression(max_iter=10000).fit(X_train, y_train)\n",
     "y_pred = lr.predict(X_test)\n",
-    "y_pred"
+    "lr.coef_, y_pred"
    ]
   },
   {
@@ -706,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -714,10 +726,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9838187702265372"
+       "(0.9838187702265372, 0.9838187702265372)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,8 +737,11 @@
    "source": [
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
-    "accuracy"
+    "# Calculated with lib\n",
+    "accuracy1 = accuracy_score(y_test, y_pred) \n",
+    "# Calculated without lib\n",
+    "accuracy2 = sum([1 if x==y else 0 for (x,y) in zip(y_test, y_pred)])/len(y_test)\n",
+    "accuracy1, accuracy2"
    ]
   }
  ],
